Update action to use cspell.json
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -14,9 +14,10 @@ jobs:
 
       - uses: streetsidesoftware/cspell-action@v4
         with:
-          files: ''
+          files: 'README.md'
           root: '.'
+          config: '.'
           strict: true
           verbose: false
 
-      - uses: theashraf/alex-action@master
+      # - uses: theashraf/alex-action@master
