--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -44,14 +44,14 @@ jobs:
         uses: lycheeverse/lychee-action@ec7614d7605b47efb08dc370f6d0a71884cba944 # 1.8.0
         with:
           args: >
-            --config ./lychee.toml
+            --config ./lychee.toml README.md
 
-      - name: Create Issue From File
-        if: |
-          github.event_name != 'pull_request' && 
-          env.lychee_exit_code != 0
-        uses: peter-evans/create-issue-from-file@v4
-        with:
-          title: Link Checker Report
-          content-filepath: ./lychee/out.md
-          labels: good-first-issue, automated issue
+      # - name: Create Issue From File
+      #   if: |
+      #     github.event_name != 'pull_request' && 
+      #     env.lychee_exit_code != 0
+      #   uses: peter-evans/create-issue-from-file@v4
+      #   with:
+      #     title: Link Checker Report
+      #     content-filepath: ./lychee/out.md
+      #     labels: good-first-issue, automated issue
