--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -1,10 +1,14 @@
-name: Docusaurus
+name: Spelling Check
 
 on:
   push:
     branches:
       - 'main'
       - 'master'
+  pull_request:
+
+permissions:
+  contents: read
 
 jobs:
   spellcheck:
@@ -13,11 +17,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: streetsidesoftware/cspell-action@v4
+        id: cspell
         with:
-          files: 'README.md'
-          root: '.'
-          config: '.'
+          config: 'cspell.json'
           strict: true
-          verbose: false
+          incremental_files_only: true
+          verbose: true
+          inline: error
 
-      # - uses: theashraf/alex-action@master
+      - name: Show Results
+        env:
+          outputs: ${{ toJSON(steps.cspell) }}
+        run: |
+          echo "$outputs"
