Output spelling check results
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -19,9 +19,10 @@ jobs:
       - uses: streetsidesoftware/cspell-action@v4
         id: cspell
         with:
+          files: "**/*.md"
           config: 'cspell.json'
+          check_dot_files: explicit
           strict: true
-          incremental_files_only: true
           verbose: true
           inline: error
 
