--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -6,7 +6,7 @@ on:
   # Runs on each PR
   pull_request:
     branches:
-      - "master"  
+      - "master"
       - 'main'
   # Runs on each push
   push:
@@ -30,25 +30,20 @@ jobs:
       #     node-version: 16
       # - run: npm run build
 
-      # Enable Lychee cache
-      - name: Restore lychee cache
-        uses: actions/cache@v3
-        with:
-          path: .lycheecache
-          key: cache-lychee-${{ github.sha }}
-          restore-keys: cache-lychee-
-
       # Run link checker on the generated HTML
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@ec7614d7605b47efb08dc370f6d0a71884cba944 # 1.8.0
         with:
+          fail: true
           args: >
-            --config ./lychee.toml README.md
+            --config ./lychee.toml
+            --cache --max-cache-age 1d
+            README.md
 
       # - name: Create Issue From File
       #   if: |
-      #     github.event_name != 'pull_request' && 
+      #     github.event_name != 'pull_request' &&
       #     env.lychee_exit_code != 0
       #   uses: peter-evans/create-issue-from-file@v4
       #   with:
