--- a/lychee.toml
+++ b/lychee.toml
@@ -78,7 +78,10 @@ headers = []
 
 # Exclude URLs from checking (supports regex)
 
-exclude = []
+exclude = [
+    "https://www.behance.net/gallery/86486979/The-BookHustler-Project",
+    
+]
 
 # Exclude these filesystem paths from getting checked.
 exclude_path = []
