--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - 'main'
       - 'master'
+  # Runs on each PR
   pull_request:
+    branches:
+      - "master"
+      - 'main'
 
 permissions:
   contents: read
