--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -1,4 +1,4 @@
-name: Link Check
+name: Link Checker
 
 on:
   schedule:
@@ -25,16 +25,23 @@ jobs:
         uses: actions/checkout@v4
 
       # Building the docs
-      # - name: Build the docs
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
-      # - run: npm run build
+      - name: Build the docs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: npm run generate
+
+      - name: Restore lychee cache
+        uses: actions/cache@v3
+        with:
+          path: .lycheecache
+          key: cache-lychee-${{ github.sha }}
+          restore-keys: cache-lychee-
 
       # Run link checker on the generated HTML
       - name: Link Checker
         id: lychee
-        uses: lycheeverse/lychee-action@ec7614d7605b47efb08dc370f6d0a71884cba944 # 1.8.0
+        uses: lycheeverse/lychee-action@22134d37a1fff6c2974df9c92a7c7e1e86a08f9c # 1.9.0
         with:
           fail: true
           args: >
@@ -42,12 +49,12 @@ jobs:
             --cache --max-cache-age 1d
             README.md
 
-      # - name: Create Issue From File
-      #   if: |
-      #     github.event_name != 'pull_request' &&
-      #     env.lychee_exit_code != 0
-      #   uses: peter-evans/create-issue-from-file@v4
-      #   with:
-      #     title: Link Checker Report
-      #     content-filepath: ./lychee/out.md
-      #     labels: good-first-issue, automated issue
+      - name: Create Issue From File
+        if: |
+          github.event_name != 'pull_request' &&
+          env.lychee_exit_code != 0
+        uses: peter-evans/create-issue-from-file@v4
+        with:
+          title: Link Checker Report
+          content-filepath: ./lychee/out.md
+          labels: good-first-issue, automated issue
