--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-website",
-  "version": "0.0.0",
-  "private": true,
+  "name": "vipul-docs",
+  "version": "1.0.0",
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
+    "start": "./scripts/build-docusaurus.sh && docusaurus start",
+    "build": "./scripts/build-docusaurus.sh && docusaurus build",
+    "generate": "./scripts/build-docusaurus.sh",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -18,6 +18,7 @@
     "@docusaurus/preset-classic": "3.0.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "cspell": "^8.3.2",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
