Updated cspell check
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -1,4 +1,4 @@
-name: Link Checker
+name: Doctor Docs
 
 on:
   schedule:
@@ -17,7 +17,7 @@ on:
 
 
 jobs:
-  Checking-Links:
+  Checking-Docs:
     runs-on: ubuntu-latest
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
