--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "test:spellcheck": "npx cspell lint --gitignore -c cspell.json"
+    "test:spellcheck": "npx cspell 'README.md' --gitignore -c cspell.json --unique --words-only --no-progress"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.1",
