Build docs on PR
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/deploy-to-github.yml
+++ b/.github/workflows/deploy-to-github.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm ci
 
       - name: Build website
-        shell: sh
+        shell: bash
         run: npm run build
 
       # Popular action to deploy to GitHub Pages:
