Deploy on schedule
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/deploy-to-github.yml
+++ b/.github/workflows/deploy-to-github.yml
@@ -9,8 +9,12 @@ on:
   # Runs on each PR
   pull_request:
     branches:
-      - "master"
-      - 'main'
+      - master
+      - main
+
+  # Deploy once every day
+  schedule:
+    - cron: "0 0 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -37,9 +41,6 @@ jobs:
         run: npm ci
 
       - name: Build website
-        shell: bash
-        env:
-          SOURCE_FILE: README-temp.md
         run: npm run build
 
       # Popular action to deploy to GitHub Pages:
