Deploy on GH pages somewhere else
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/deploy-to-github.yml
+++ b/.github/workflows/deploy-to-github.yml
@@ -49,5 +49,13 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v3
         with:
+          personal_token: ${{ secrets.PERSONAL_TOKEN }}
+          external_repository: vipulgupta2048/vipulgupta2048.github.io
+          publish_dir: ./build
+          
+      - name: Deploy to GitHub Pages
+        if: github.event_name != 'pull_request'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
