--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -44,8 +44,8 @@ jobs:
           patterns: "**.md"
           language: "en-US"
           # LanguageTool flags - see https://languagetool.org/http-api/swagger-ui/#!/default/post_check
-          enabled_rules: "TYPOS,TYPOGRAPHY,CASING,EN_QUOTES,DASH_RULE,WORD_CONTAINS_UNDERSCORE,UPPERCASE_SENTENCE_START,ARROWS,COMMA_PARENTHESIS_WHITESPACE,UNLIKELY_OPENING_PUNCTUATION,SENTENCE_WHITESPACE,CURRENCY,EN_UNPAIRED_BRACKETS,PHRASE_REPETITION,PUNCTUATION_PARAGRAPH_END,METRIC_UNITS_EN_US,ENGLISH_WORD_REPEAT_BEGINNING_RULE"
-          disabled_categories: "WHITESPACE_RULE"
+          enabled_rules: "TYPOS,TYPOGRAPHY,CASING,EN_QUOTES,DASH_RULE,WORD_CONTAINS_UNDERSCORE,UPPERCASE_SENTENCE_START,ARROWS,CURRENCY,EN_UNPAIRED_BRACKETS,PHRASE_REPETITION,PUNCTUATION_PARAGRAPH_END,METRIC_UNITS_EN_US,ENGLISH_WORD_REPEAT_BEGINNING_RULE"
+          disabled_categories: "WHITESPACE_RULE, COMMA_PARENTHESIS_WHITESPACE,UNLIKELY_OPENING_PUNCTUATION,SENTENCE_WHITESPACE"
 
       - name: Run misspell
         uses: reviewdog/action-misspell@v1
