--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 	},
 	"dependencies": {
 		"@docusaurus/core": "3.2.1",
+		"@docusaurus/plugin-google-gtag": "^3.2.1",
+		"@docusaurus/plugin-google-tag-manager": "^3.2.1",
 		"@docusaurus/preset-classic": "3.2.1",
 		"@docusaurus/utils-validation": "^3.2.1",
 		"@mdx-js/react": "^3.0.1",
