--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint:check": "eslint . --ext .json,.js,.jsx,.ts,.tsx",
     "prettier:check": "prettier --check .",
     "eslint:fix": "eslint . --fix --ext .json,.js,.jsx,.ts,.tsx",
-    "prettier:fix": "prettier --write ."
+    "prettier:fix": "prettier --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@docusaurus/core": "3.2.1",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.5",
     "prettier": "^3.2.5",
     "typescript": "^5.4.4"
   },
