--- a/.github/workflows/docs-checker.yml
+++ b/.github/workflows/docs-checker.yml
@@ -34,17 +34,17 @@ jobs:
             --config ./lychee.toml
             build/**
 
-      - name: Run LanguageTool
-        uses: reviewdog/action-languagetool@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review
-          level: info
-          patterns: "**.md"
-          language: "en-US"
-          # LanguageTool flags - see https://languagetool.org/http-api/swagger-ui/#!/default/post_check
-          enabled_rules: "TYPOS,TYPOGRAPHY,CASING,EN_QUOTES,DASH_RULE,WORD_CONTAINS_UNDERSCORE,UPPERCASE_SENTENCE_START,ARROWS,CURRENCY,EN_UNPAIRED_BRACKETS,PHRASE_REPETITION,PUNCTUATION_PARAGRAPH_END,METRIC_UNITS_EN_US,ENGLISH_WORD_REPEAT_BEGINNING_RULE"
-          disabled_categories: "WHITESPACE_RULE, COMMA_PARENTHESIS_WHITESPACE,UNLIKELY_OPENING_PUNCTUATION,SENTENCE_WHITESPACE"
+      # - name: Run LanguageTool
+      #   uses: reviewdog/action-languagetool@v1
+      #   with:
+      #     github_token: ${{ secrets.github_token }}
+      #     reporter: github-pr-review
+      #     level: info
+      #     patterns: "**.md"
+      #     language: "en-US"
+      #     # LanguageTool flags - see https://languagetool.org/http-api/swagger-ui/#!/default/post_check
+      #     enabled_rules: "TYPOS,TYPOGRAPHY,CASING,EN_QUOTES,DASH_RULE,WORD_CONTAINS_UNDERSCORE,UPPERCASE_SENTENCE_START,ARROWS,CURRENCY,EN_UNPAIRED_BRACKETS,PHRASE_REPETITION,PUNCTUATION_PARAGRAPH_END,METRIC_UNITS_EN_US,ENGLISH_WORD_REPEAT_BEGINNING_RULE"
+      #     disabled_categories: "WHITESPACE_RULE, COMMA_PARENTHESIS_WHITESPACE,UNLIKELY_OPENING_PUNCTUATION,SENTENCE_WHITESPACE"
 
       - name: Run misspell
         uses: reviewdog/action-misspell@v1
