--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@docusaurus/core": "3.2.1",
-    "@docusaurus/plugin-google-gtag": "^3.2.1",
-    "@docusaurus/plugin-google-tag-manager": "^3.2.1",
-    "@docusaurus/preset-classic": "3.2.1",
-    "@docusaurus/utils-validation": "^3.2.1",
+    "@docusaurus/core": "^3.6.1",
+    "@docusaurus/plugin-google-gtag": "^3.6.1",
+    "@docusaurus/plugin-google-tag-manager": "^3.6.1",
+    "@docusaurus/preset-classic": "^3.6.1",
+    "@docusaurus/utils-validation": "^3.6.1",
     "@mdx-js/react": "^3.0.1",
     "clsx": "^2.1.0",
     "docusaurus-plugin-sass": "^0.2.5",
@@ -36,9 +36,9 @@
     "sass": "^1.74.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.2.1",
-    "@docusaurus/tsconfig": "^3.2.1",
-    "@docusaurus/types": "3.2.1",
+    "@docusaurus/module-type-aliases": "^3.6.1",
+    "@docusaurus/tsconfig": "^3.6.1",
+    "@docusaurus/types": "^3.6.1",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
