--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "npm run generate && docusaurus start",
-    "build": "npm run generate && docusaurus build",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
     "generate": "./scripts/build-docusaurus.sh",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
