--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "eslint:check": "eslint . --ext .json,.js,.jsx,.ts,.tsx",
     "prettier:check": "prettier --check .",
     "eslint:fix": "eslint . --fix --ext .json,.js,.jsx,.ts,.tsx",
-    "prettier:fix": "prettier --write .",
-    "prepare": "husky"
+    "prettier:fix": "prettier --write ."
   },
   "dependencies": {
     "@docusaurus/core": "^3.7.0",
@@ -42,7 +41,6 @@
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
-    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
