--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "sass": "^1.86.1"
   },
   "devDependencies": {
