--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@docusaurus/plugin-client-redirects": "^3.7.0",
     "@docusaurus/plugin-google-gtag": "^3.7.0",
     "@docusaurus/plugin-google-tag-manager": "^3.7.0",
+    "@docusaurus/plugin-pwa": "^3.8.1",
     "@docusaurus/preset-classic": "^3.7.0",
     "@docusaurus/utils-validation": "^3.7.0",
     "@mdx-js/react": "^3.1.0",
