Improve PDF generation with page-by-page rendering
- Use jsPDF + html2canvas to render each page section separately
- Each .page div becomes exactly one PDF page (no more cut content)
- Custom filename: AI-Workshop-Proposal-Vipul-Gupta.pdf
- Added loading spinner during generation
- Fallback to print dialog if generation fails

Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@mdx-js/react": "^3.1.1",
     "clsx": "^2.1.1",
     "docusaurus-plugin-sass": "^0.2.6",
-    "react-split-flap": "^0.1.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
+    "react-split-flap": "^0.1.7",
     "sass": "^1.94.2"
   },
   "devDependencies": {
