Use @react-pdf/renderer for professional PDF generation
- Create WorkshopPDF component with proper page structure
- Real selectable text (not images)
- Proper fonts: Outfit, Playfair Display, IBM Plex Mono
- Custom filename: AI-Workshop-Proposal-Vipul-Gupta.pdf
- 6 pages with controlled page breaks
- Links are clickable in the PDF
- Use BrowserOnly to avoid SSG issues

Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@docusaurus/preset-classic": "^3.9.2",
     "@docusaurus/utils-validation": "^3.9.2",
     "@mdx-js/react": "^3.1.1",
+    "@react-pdf/renderer": "^4.3.2",
     "clsx": "^2.1.1",
     "docusaurus-plugin-sass": "^0.2.6",
     "html2canvas": "^1.4.1",
