fix: resolve PDF generation errors with proper Buffer polyfill and layout fixes
- Add Buffer polyfill via webpack configuration in docusaurus.config.ts
  (fixes "Buffer is not defined" error in @react-pdf/renderer)
- Register italic font variants for Playfair Display (fixes font errors)
- Reduce content density across all PDF pages to prevent overlapping:
  - Smaller fonts, padding, and margins throughout
  - Better spacing for session cards, deliverables, testimonials
  - Compact ROI and CTA sections
- Add 'buffer' npm package as dependency
- Remove inline Buffer polyfill from WorkshopPDF.tsx (now handled by webpack)

Tested with Playwright: No console errors, PDF ready for download

Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@docusaurus/utils-validation": "^3.9.2",
     "@mdx-js/react": "^3.1.1",
     "@react-pdf/renderer": "^4.3.2",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "docusaurus-plugin-sass": "^0.2.6",
     "html2canvas": "^1.4.1",
